add more quizzez

--- a/interview_prep/index.html
+++ b/interview_prep/index.html
@@ -90,9 +90,7 @@
     <div id="question" class="question"></div>
     <div id="options" class="options"></div>
     <div id="explanation"></div>
-    <a class="d-block" href="/week_1_d_1.html" target="_blank">Week_1_d_1</a>
-    <a class="d-block" href="/week_1_d_2.html" target="_blank">Week_1_d_2</a>
-    <a class="d-block" href="/week_1_d_3.html" target="_blank">Week_1_d_3</a>
+    <a class="d-block" href="/interview_prep/event_loop.html" target="_blank">Event Loop</a>
   </div>
   <script src="quizdata.js"></script>
   <script src="app.js"></script>
