--- a/test.html
+++ b/test.html
@@ -74,15 +74,6 @@
       background: #b0c4de;
       cursor: not-allowed;
     }
-
-    .d-block {
-      display:block;
-      margin:2rem auto;
-      border:1px solid #ddd;
-      padding:2rem;
-      border-radius: 15px;
-      max-width:600px;
-    }
   </style>
 </head>
 <body>
@@ -90,9 +81,7 @@
     <div id="question" class="question"></div>
     <div id="options" class="options"></div>
     <div id="explanation"></div>
-    <a class="d-block" href="/week_1_d_1.html" target="_blank">Week_1_d_1</a>
-    <a class="d-block" href="/week_1_d_2.html" target="_blank">Week_1_d_2</a>
-    <a class="d-block" href="/week_1_d_3.html" target="_blank">Week_1_d_3</a>
+    <button id="next-btn" class="next-btn" disabled>Next</button>
   </div>
   <script src="quizdata.js"></script>
   <script src="app.js"></script>
