--- a/interview_prep/owasp.html
+++ b/interview_prep/owasp.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz App</title>
+  <title>OWASP</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,9 +13,8 @@
       margin: 0;
       background: #f0f4f8;
     }
-
     .quiz-container {
-      margin-top: 2rem;
+      margin-top:2rem;
       background: #ffffff;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -24,19 +22,16 @@
       width: 1400px;
       text-align: center;
     }
-
     .question {
       font-size: 18px;
       margin-bottom: 20px;
     }
-
     .options {
       display: flex;
       flex-direction: column;
       gap: 10px;
     }
-
-    .option {
+    .option{
       padding: 10px 20px;
       background: #f9f9f9;
       border: 1px solid #ddd;
@@ -46,28 +41,25 @@
     }
 
     .explanation {
-      margin-top: 2rem;
+      margin-top:2rem;
       background: #b0c4de;
       border: 1px solid #007bff;
       border-radius: 8px;
-      padding: 1rem;
+      padding:1rem;
     }
 
-
+  
     .option:hover {
       background: #e0e7ff;
     }
-
     .option.correct {
       background: #d4f5d4;
       border-color: #4caf50;
     }
-
     .option.incorrect {
       background: #fbdede;
       border-color: #f44336;
     }
-
     .next-btn {
       margin-top: 20px;
       padding: 10px 20px;
@@ -78,35 +70,20 @@
       cursor: pointer;
       font-size: 16px;
     }
-
     .next-btn:disabled {
       background: #b0c4de;
       cursor: not-allowed;
     }
-
-    .d-block {
-      display: block;
-      margin: 2rem auto;
-      border: 1px solid #ddd;
-      padding: 2rem;
-      border-radius: 15px;
-      max-width: 600px;
-    }
   </style>
 </head>
-
 <body>
   <div class="quiz-container">
     <div id="question" class="question"></div>
     <div id="options" class="options"></div>
     <div id="explanation"></div>
-    <a class="d-block" href="/interview_prep/event_loop.html" target="_blank">Event Loop</a>
-    <a class="d-block" href="/interview_prep/streams.html" target="_blank">Streams</a>
-    <a class="d-block" href="/interview_prep/buffers.html" target="_blank">Buffers</a>
-    <a class="d-block" href="/interview_prep/owasp.html" target="_blank">OWASP</a>
+    <button id="next-btn" class="next-btn" disabled>Next</button>
   </div>
-  <script src="quizdata.js"></script>
+  <script src="owasp.js"></script>
   <script src="app.js"></script>
 </body>
-
 </html>
